[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/tracks/track.gd" type="Script" id=1]
[ext_resource path="res://scenes/trackgui.tscn" type="PackedScene" id=2]

[node name="Track" type="Spatial"]
script = ExtResource( 1 )

[node name="Checkpoints" type="Spatial" parent="."]

[node name="TrackGUI" parent="." instance=ExtResource( 2 )]

[connection signal="lap_complete" from="." to="TrackGUI" method="_on_lap_complete"]
[connection signal="time_updated" from="." to="TrackGUI" method="_on_time_updated"]
[connection signal="wrong_way" from="." to="TrackGUI" method="_on_wrong_way_detected"]
